fix auroras on mobile and web dark

--- a/src/styles/components/_auroras.scss
+++ b/src/styles/components/_auroras.scss
@@ -9,6 +9,12 @@
     // width: 100%;
     // height: 100%;
 
+    opacity: 0.3;
+
+    @include for-phone-only {
+        display: none;
+    }
+
     &--right {
         position: absolute;
         @include toRem(right, -261);
